# fb-messenger-desktop

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  main_window.rs
