[package]
name = "fb-messenger-desktop"
version = "0.1.5"
description = "A lightweight Tauri wrapper for Messenger."
authors = ["vaclis"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8.5", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.0"
tauri-plugin-global-shortcut = "2.3.0"
thiserror = "2"
